@@ -1,0 +1,27 @@
+             TinyScheme RE (Regular Expressions) extension
+             ---------------------------------------------
+Version 1.2, August 2002
+
+The bulk of this directory is the regular expression library written
+by Henry Spencer (see file README and COPYRIGHT).
+
+Two files were added to produce the TinyScheme regular expression
+library, re.so: re.c and re.makefile. The included re.makefile was contributed
+initially by Stephen Gildea and should be adaptable to all Unix systems.
+
+The makefile produces a DLL named re.so. For now, it contains just
+a single foreign function (re-match <pattern> <string>). It returns
+true (string matches pattern) or false. If it is called with an
+extra parameter, which should be a vector, overwrites as many elements
+of the vector as needed with the strings that matched the corresponding
+parenthesized subexpressions inside <pattern>.
+
+It is not fully tested, so use with caution.
+
+Load the extension from inside TinyScheme using
+(load-extension "re/re")
+assuming that re.so is in the directory "re".
+
+Load "re.scm" if you wish to use v.1.1 behavior.
+ 
+dsouflis@acm.org
