@@ -2,58 +2,43 @@
 /* Henry Spencer's implementation of Regular Expressions,
    used for TinyScheme */
 /* Refurbished by Stephen Gildea */
+/* Updated by armornick */
+
+/* this defintion is to export the init function */
+#define SCHEME_MODULE
 #include "regex.h"
-#include "scheme.h"
-#include "scheme-private.h"
-
-#if defined(_WIN32)
-#define EXPORT __declspec( dllexport )
-#else
-#define EXPORT
-#endif
-
-/* Since not exported */
-#define T_STRING 1
-
-static void set_vector_elem(pointer vec, int ielem, pointer newel) {
- int n=ielem/2;
- if(ielem%2==0) {
-     vec[1+n]._object._cons._car=newel;
- } else {
-     vec[1+n]._object._cons._cdr=newel;
- }
-}
+#include <scheme.h>
 
 pointer foreign_re_match(scheme *sc, pointer args) {
-  pointer retval=sc->F;
+  pointer retval=scheme_false(sc);
   int retcode;
   regex_t rt;
   pointer first_arg, second_arg;
-  pointer third_arg=sc->NIL;
+  pointer third_arg=scheme_nil(sc);
   char *string;
   char *pattern;
   int num=0;
 
-  if(!((args != sc->NIL) && sc->vptr->is_string((first_arg = sc->vptr->pair_car(args)))
-       && (args=sc->vptr->pair_cdr(args))
-       && sc->vptr->is_pair(args) && sc->vptr->is_string((second_arg = sc->vptr->pair_car(args))))) {
-    return sc->F;
+  if(!((args != scheme_nil(sc)) && scheme_is_string((first_arg = scheme_pair_car(args)))
+       && (args=scheme_pair_cdr(args))
+       && scheme_is_pair(args) && scheme_is_string((second_arg = scheme_pair_car(args))))) {
+    return scheme_false(sc);
   }
-  pattern = sc->vptr->string_value(first_arg);
-  string = sc->vptr->string_value(second_arg);
+  pattern = scheme_string_value(first_arg);
+  string = scheme_string_value(second_arg);
 
-  args=sc->vptr->pair_cdr(args);
-  if(args!=sc->NIL) {
-    if(!(sc->vptr->is_pair(args) && sc->vptr->is_vector((third_arg = sc->vptr->pair_car(args))))) {
-      return sc->F;
+  args=scheme_pair_cdr(args);
+  if(args!=scheme_nil(sc)) {
+    if(!(scheme_is_pair(args) && scheme_is_vector((third_arg = scheme_pair_car(args))))) {
+      return scheme_false(sc);
     } else {
-      num=third_arg->_object._number.value.ivalue;
+      num = scheme_ivalue(third_arg);
     }
   }
 
 
   if(regcomp(&rt,pattern,REG_EXTENDED)!=0) {
-    return sc->F;
+    return scheme_false(sc);
   }
 
   if(num==0) {
@@ -65,22 +50,21 @@ pointer foreign_re_match(scheme *sc, pointer args) {
       if(retcode==0) {
     int i;
     for(i=0; i<num; i++) {
-#undef cons
-      set_vector_elem(third_arg, i,
-              sc->vptr->cons(sc, sc->vptr->mk_integer(sc, pmatch[i].rm_so),
-                          sc->vptr->mk_integer(sc, pmatch[i].rm_eo)));
+      scheme_set_vector_elem(third_arg, i,
+              cons(sc, scheme_integer(sc, pmatch[i].rm_so),
+                          scheme_integer(sc, pmatch[i].rm_eo)));
 
     }
       }
       free(pmatch);
     } else {
-      sc->no_memory=1;
+      scheme_memory_error(sc);
       retcode=-1;
     }
   }
 
   if(retcode==0) {
-    retval=sc->T;
+    retval=scheme_true(sc);
   }
 
   regfree(&rt);
@@ -102,7 +86,9 @@ static char* utilities=";; return the substring of STRING matched in MATCH-VECTO
 "    (substring string (cdr (vector-ref match-vector n))\n"
 "             (string-length string))))\n";
 
-EXPORT void init_re(scheme *sc) {
-  sc->vptr->scheme_define(sc,sc->global_env,sc->vptr->mk_symbol(sc,"re-match"),sc->vptr->mk_foreign_func(sc, foreign_re_match));
-  /*    sc->vptr->load_string(sc,utilities);*/
+SCHEME_EXPORT void init_re(scheme *sc) {
+  printf("RE: defining foreign function\n");
+  scheme_define(sc, scheme_global_env(sc), scheme_symbol(sc, "re-match"), scheme_foreign_func(sc, foreign_re_match));
+  // printf("RE: adding utility functions\n");
+  // scheme_load_string(sc, utilities);
 }
